--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="orange">#FFFF8800</color>
+
+    <color name="white_200">#EFEAEA</color>
+
+    <color name="red">#FF0000</color>
+    <color name="red_200">#ff9e81</color>
+    <color name="red_brick">#930000</color>
+
+    <color name="gold">#BF9D58</color>
+    <color name="grey">#2c2c2c</color>
+    <color name="green_200">#C478C36C</color>
+    <color name="green">#049A2E</color>
+    <color name="silver">#D9D9D9</color>
+    <color name="silver_200">#A7A7A7</color>
+    <color name="dark_red">#710303</color>
+    <color name="white_grey">#686868</color>
 </resources>
