--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,8 +13,12 @@
 
     <color name="gold">#BF9D58</color>
     <color name="grey">#2c2c2c</color>
-    <color name="green_200">#C478C36C</color>
+
     <color name="green">#049A2E</color>
+    <color name="green_200">#C478C36C</color>
+    <color name="green_700">#58763a</color>
+    <color name="green_olive">#b5b35c</color>
+
     <color name="silver">#D9D9D9</color>
     <color name="silver_200">#A7A7A7</color>
     <color name="dark_red">#710303</color>
