--- a/app/src/main/res/layout/jadwal.xml
+++ b/app/src/main/res/layout/jadwal.xml
@@ -24,7 +24,7 @@
         android:layout_margin="10dp">
 
         <TextView
-            android:id="@+id/namaMk"
+            android:id="@+id/nameMk"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -45,7 +45,7 @@
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/namaMk" />
+            app:layout_constraintTop_toBottomOf="@+id/nameMk" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
