--- a/app/src/main/res/layout/matkul.xml
+++ b/app/src/main/res/layout/matkul.xml
@@ -7,10 +7,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp"
-    android:layout_marginBottom="10dp"
-    android:backgroundTint="@color/white"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp"
+    android:layout_marginTop="5dp"
+    android:backgroundTint="@color/white_200"
     android:clickable="true"
     android:elevation="5dp"
     android:focusable="true"
@@ -29,32 +29,11 @@
             android:layout_weight="1"
             android:ellipsize="end"
             android:maxLines="1"
+            android:layout_marginStart="10dp"
             android:text="Nama Matakuliah"
-            android:textSize="16sp"
-            android:textStyle="bold"
+            android:textSize="14sp"
             android:transitionName="name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/dosen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Dosen : "
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nameMK" />
-
-        <TextView
-            android:id="@+id/nameDsn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Nama Dosen"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@+id/dosen"
-            app:layout_constraintStart_toEndOf="@+id/dosen"
-            app:layout_constraintTop_toTopOf="@+id/dosen" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
