--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,7 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.AbsensiApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.AbsensiApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Primary brand color. -->
         <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryVariant">@color/silver</item>
         <item name="colorOnPrimary">@color/white</item>
