--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -26,7 +26,7 @@
         android:background="@android:color/transparent"
         app:icon="@drawable/refresh"
         app:iconGravity="top"
-        app:iconTint="@color/red_brick"
+        app:iconTint="@color/gold"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
