--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -142,7 +142,8 @@
         android:background="@android:color/transparent"
         app:icon="@drawable/refresh"
         app:iconGravity="top"
-        app:iconTint="@color/red_brick"
+        app:iconTint="@color/gold"
+        android:layout_marginTop="4dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="@+id/textView3" />
